# docling-sdg

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  mergify.yml
.github/scripts/: release.sh
.github/workflows/: cd.yml  checks.yml  ci.yml  pypi.yml
docling_sdg/: hello_world.py
docling_sdg/cli/: main.py  qa.py
docling_sdg/qa/: base.py  critique.py  generate.py  sample.py  utils.py
tests/: test_hello_world.py  test_qa_base.py  test_qa_cli.py  test_qa_prompts.py
tests/cli/: test_qa_cli.py
